--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
   crdb:
     image: 'cockroachdb/cockroach:latest-v23.1'
     command: >
-      start-single-node --certs-dir=/cockroach/certs --advertise-addr=localhost --http-addr=0.0.0.0:8081
+      start-single-node --certs-dir=/cockroach/certs --advertise-addr=0.0.0.0 --http-addr=0.0.0.0:8081
     environment:
       - COCKROACH_USER=root
       - COCKROACH_PASSWORD=suraj
